feat: add initial migration and configure dbcontext

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "M3S1Db": "Data Source=localhost;Initial Catalog=M3S1Db;Integrated Security=True;"
+  }
 }
